<resources>
    <string name="app_name">SkillBill</string>
    <!-- Strings pour creerGroupeActivite -->
    <string name="nomGroupeACreer">Nom du groupe</string>
    <string name="titre_toolbar_creer_groupe">Créer un groupe</string>
    <string name="action_enregistrer">Enregistrer</string>
    <string name="titre_nom_Groupe">Nom du nouveau groupe</string>
    <string name="textview_nom_groupe_a_creer">Entrez le nom du groupe</string>
    <string name="action_annuler">Annuler</string>

    <!-- Strings pour le solde de l'utilisateur dans un groupe -->
    <string name="solde_utilisateur_nul">Bravo ! Tous les comptes sont réglés</string>
    <string name="solde_utilisateur_crediteur">On vous doit </string>
    <string name="solde_utilisateur_debiteur">Vous devez  </string>
    <string name="pas_de_facture_dans_le_groupe">Pas de factures, appuyer sur l\'icone pour en ajouter</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_logo">app_logo</string>
    <string name="choississez_votre_devise">Choississez votre devise</string>
    <string name="action_ajouter">Ajouter</string>

    <!-- Strings pour AjouterFactureActivity -->
    <string name="titre_montant">Montant : </string>
    <string name="titre_payeur">Qui a payé la facture </string>
    <string name="titre_toolbar_ajouter_facture">Ajouter une facture au groupe </string>

    <string-array name="spinner_ajouter_facture_choix">
        <item>Moi uniquement</item>
        <item>Ajouter ou modifier les payeurs</item>
    </string-array>

    <string-array name="spinner_ajouter_facture_choix_utilisateur_pour_remboursement">
        <item>Partager avec tous les membres équitablement</item>
        <item>Choisir manuellement les montants à rembourser</item>
    </string-array>
    <string name="text_montant_paye_utilisateurs_facture">Le montant de $1 a ete paye (Pour exemple)</string>
    <string name="titre_date">Date : </string>
    <string name="titre_facture">Nom de l\'activité</string>
    <string name="txt_message_erreur">Le montant ou la date est invalide</string>
    <string name="titre_erreur_generique">Erreur</string>
    <string name="txt_facture_par_defaut">Facture du </string>
    <string name="tab_factures">Factures</string>
    <string name="tab_membres">Membres</string>

    <!-- Strings pour Voir les groupes activity -->
    <string name="rv_pas_de_groupes">Bienvenue, Vous n\'avez pas encore de groupes, appuyez sur le bouton + pour en ajouter un</string>

    <!-- Strings pour VoirUnGroupeActivity-->
    <string name="invitation_objet_courriel">Invitation SkillBill</string>
    <string name="texte_courriel"> Télécharge SkillBill, mais bon on n\'est pas sur le PlayStore, un APK ? On sera bientôt disponibles sur FDroid</string>
    <string name="pas_de_membres_dans_groupe">Vous n\'avez aucun autre membres dans ce groupe, cliquez sur Ajouter pour en ajouter un</string>
    <string name="membres_dans_le_groupe">Vous partagez vos factures avec : </string>
    <string name="titre_ajouter_un_membre_au_groupe">Entrez le courriel du membre à ajouter</string>
    <string name="ajouter">Ajouter</string>
    <string name="Inviter">Inviter</string>
    <string name="Annuler">Annuler</string>
    <string name="email_inconnu">Email inconnu, vous pouvez l\'inviter</string>
    <string name="email_deja_dans_groupe">Vous avez dejà ajouté cet utilisateur </string>
    <string name="supprimer_facture">Supprimer la facture</string>
    <string name="nom_du_nouveau_groupe">Nom du nouveau groupe</string>
    <string name="pas_de_connection_internet">Erreur de connection à la source de données</string>
    <string name="modifier">Modifier</string>
    <string name="envoyer">Envoyer</string>
    <string name="devise_du_groupe">devise du groupe</string>
    <string name="preference_user">USER_PREFS</string>
    <string name="montant">Montant ...</string>
    <string name="mot_de_passe">mot de passe</string>
    <string name="cancel">Annuler</string>
    <string name="action_retour">Retour</string>
    <string name="pas_d_activite_photo_diponible">Nous ne pouvons trouver une application compatible pour prendre des
        photos sur votre appareil
    </string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="modif_effectuee">La modification abie été effectuée</string>
    <string name="erreur_modification">Une erreur s\'est produite, les données n\'ont pas été modifiées</string>
    <string name="a_paye"> \u0020 a payé \u0020 </string>
    <string name="au_moins_un">Au moins un utilisateur doit être selectionné</string>
    <string name="dans_votre_monnaie">dans votre monnaie</string>
    <string name="mot_de_passe_actuel">Mot de passe actuel</string>
    <string name="nouveau_mdp_laissez_vide_si_inchang">Nouveau mdp (laissez vide si inchangé)</string>
    <string name="devise">Devise</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="modifier_votre_profil">Modifier votre profil</string>


</resources>