<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbarCreerGroupe"

            app:title="@string/titre_toolbar_creer_groupe">
        <Button
                android:id="@+id/btnEnregistrer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_enregistrer" style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/design_default_color_on_primary"/>
        <Button
                android:id="@+id/btnAnuller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_annuler" android:textColor="@color/design_default_color_on_primary"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </androidx.appcompat.widget.Toolbar>
    <TextView
            android:text="@string/titre_nom_Groupe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textViewNomGroupeTitre" />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textViewNomGroupeEntree"
            android:inputType="text" tools:text="@string/textview_nom_groupe_a_creer"
            android:autofillHints="@string/textview_nom_groupe_a_creer"/>
</LinearLayout>