<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_bg_toolbar"
        android:maxHeight="160dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="104dp"
            android:layout_height="110dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/no_profile_pic"
            app:tint="#000000" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/oswald"
            android:text="@string/modifier_votre_profil"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlModifNom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:startIconDrawable="@drawable/round_account_box_white_18dp"
        app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfModifierNom"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#66000000"
            android:hint="Nom"
            android:inputType="textPersonName"
            android:shadowColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlModifEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlModifNom"
        app:startIconDrawable="@drawable/round_alternate_email_white_18dp"
        app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfModifEmail"
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="#66000000"
            android:hint="exemple@Courriel.ca"
            android:inputType="textPersonName"
            android:shadowColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlModifMdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"

        app:boxCornerRadiusTopStart="30dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlModifEmail"
        app:startIconDrawable="@drawable/round_vpn_key_white_18dp"
        app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfModifMdp"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#66000000"
            android:hint="@string/nouveau_mdp_laissez_vide_si_inchang"
            android:inputType="textPassword"
            android:shadowColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:hint="@string/devise"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlModifMdp"
        app:startIconDrawable="@drawable/twotone_payments_black_18dp"
        app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/modif_monnaie_dropdown"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#66000000"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlMdpCourrant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="29dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"

        app:boxCornerRadiusTopStart="30dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:startIconDrawable="@drawable/round_vpn_key_white_18dp"
        app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfMdpCourrant"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#66000000"
            android:hint="@string/mot_de_passe_actuel"
            android:inputType="textPassword"
            android:shadowColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBarModifProfil"
        style="?android:attr/progressBarStyle"
        android:layout_width="148dp"
        android:layout_height="104dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlMdpCourrant" />

    <Button
        android:id="@+id/btnEnrgstProfil"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/colorPrimary"
        android:foregroundGravity="center"
        android:text="@string/enregistrer"
        app:icon="@drawable/round_save_black_18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBarModifProfil"
        app:rippleColor="#232222" />
</androidx.constraintlayout.widget.ConstraintLayout>